// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > renders with active variant ghost correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with active variant link correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with active variant outline correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with active variant soft correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with active variant solid correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with active variant subtle correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with activeClass correctly 1`] = `
"<button type="button" data-slot="base" class="font-bold">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with as correctly 1`] = `
"<div data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</div>"
`;

exports[`Button > renders with avatar correctly 1`] = `
"<button type="button" data-slot="base" class=""><span data-slot="root"><img src="https://github.com/benjamincanac.png" data-slot="image"></span>
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`Button > renders with block correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with class correctly 1`] = `
"<button type="button" data-slot="base" class="rounded-full font-bold">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with default slot correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if-->Default slot
  <!--v-if-->
</button>"
`;

exports[`Button > renders with disabled correctly 1`] = `
"<button type="button" disabled="" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with inactiveClass correctly 1`] = `
"<button type="button" data-slot="base" class="font-light">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with label correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with leading slot correctly 1`] = `
"<button type="button" data-slot="base" class="">Leading slot
  <!--v-if-->
  <!--v-if-->
</button>"
`;

exports[`Button > renders with neutral variant ghost correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with neutral variant link correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with neutral variant outline correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with neutral variant soft correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with neutral variant solid correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with neutral variant subtle correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with pohon correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="font-bold">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with primary variant ghost correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with primary variant link correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with primary variant outline correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with primary variant soft correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with primary variant solid correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with primary variant subtle correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with size lg correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with size md correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with size sm correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with size xl correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with size xs correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with square correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if--><span data-slot="label" class="">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Button > renders with trailing slot correctly 1`] = `
"<button type="button" data-slot="base" class="">
  <!--v-if-->
  <!--v-if-->Trailing slot
</button>"
`;
